<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HotelDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp">

                <TextView
                    android:text="@string/hotel_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="3sp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                >




            </androidx.viewpager.widget.ViewPager>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical"
                        android:padding="8dp">


                        <TextView

                            android:id="@+id/restraunt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/aria_mt_light"
                            android:maxLines="3"
                            android:text="Reversing Falls Resturant\nshajh skaj"
                            android:textColor="@color/primaryColor"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:numStars="5"
                            android:rating="0"
                            android:theme="@style/RatingBarAppProfile" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/foodie_light_grey" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/web_url"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/child_margin"
                                    android:drawableStart="@drawable/compass_regular"
                                    android:drawablePadding="10dp"
                                    android:text="sales@skysainjohn.com"
                                    android:textColor="@android:color/black" />

                                <TextView
                                    android:id="@+id/phone_number"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/child_margin"
                                    android:drawableStart="@drawable/ic_phone_"
                                    android:drawablePadding="10dp"
                                    android:text="sales@skysainjohn.com"
                                    android:textColor="@android:color/black" />

                                <TextView
                                    android:id="@+id/address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/child_margin"
                                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                                    android:drawablePadding="10dp"
                                    android:text="sales@skysainjohn.com"
                                    android:textColor="@android:color/black" />


                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/view_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.25"
                        android:background="@color/primaryColor"
                        android:text="@string/comments"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"

                        app:icon="@drawable/ic_comment_black_24dp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/navgiate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.25"
                        android:background="@color/primaryColor"
                        android:text="@string/navigate"

                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_navigation_black_24dp" />

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/aria_mt_light"
                            android:text="@string/hotel_details"
                            android:textColor="@color/primaryColor"
                            android:textSize="@dimen/about_textsize"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/about_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/detail"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>